# Sandbox

./: .gitignore  CMakeLists.txt  JD2SunInertial.c  LatLong.c  Taylor.c  crossu.m  development-practices.md  igrfline.c  loadigrfcoefs.c  reduceRadians.c  triad.c
Radio_data/: radio_code_instruction
Radio_data/temp_radio/RFM69/: RFM69.cpp
Radio_data/temp_radio/arduino/ref/basic_tx_1/: basic_tx_1.ino
Radio_data/temp_radio/arduino/v1.0/beacons/beacon_1/: beacon_1.ino
Radio_data/temp_radio/arduino/v1.0/ground_station/: ground_station.ino
Radio_data/temp_radio/arduino/v1.1/ground_station_2/: ground_station_2.ino
Source/: OPASv3.asv  OPASv3.m
Source/OPAS_Helper_Functions/: gai2gall.m  oDiffEq.m  xe2xi.m
Source/igrf/: loadigrfcoefs.m
adcs_matlab_code/Attitude Determination Code/: license.txt  triad.m
cmake/: usip_macros.cmake
dynamics/adcs/: ADCSCode.m  Date2Julian.m  JD2SunInertial.m  LatLong.m  Taylor.m  constant.m  igrf.m  igrfScalar.m  reduceRadians.m
dynamics/attitude-simulation/Documentation/: CHANGELOG.md  File_Architecture.md  Instructions.md  Simulation_Overview.md
dynamics/attitude-simulation/Source/: CP2TLE.txt  OPASv3.m  epoch2datenum.m  magfd.m
dynamics/attitude-simulation/Source/OPAS_Helper_Functions/: Bi2Bb.m  Me2E.m  OPAS.m  aDiffEq.m  col2mat.m  magErr.m  qerr.m  qtrans.m  r2gai.m  rllt2BL.m  roundto.m  tle2keps.m  wi2wo.m  wo2wi.m  xe2rll.m  xi2xb.m  xi2xe.m  xm2xe.m  xo2xi.m
dynamics/attitude-simulation/Source/igrf/: igrf.m
dynamics/bdottest/: bdottest.m
dynamics/control/: Date2Julian.c  LatLong.c  Taylor.c  constant.c  loadigrfcoefs.c  reduceRadians.c
dynamics/sun-sensors/: albedo.m  cube_driver.m  drawCones.m  drawConesActual.m  drawCube.m  sun_body.m  to123.m  tosc.m
software/launchpad/: CMakeLists.txt  build.sh  licenses.txt
software/launchpad/cmake/: usip_macros.cmake
software/launchpad/cmake/custom_toolchains/: msp430.cmake
software/launchpad/src/: CMakeLists.txt
software/launchpad/src/data_board/: CMakeLists.txt  asdf.hex  factorial.h
software/launchpad/src/dev_board/: CMakeLists.txt  gcd.h
software/launchpad/src/sensor_board/: CMakeLists.txt  gcd.c  gcd.h
software/launchpad/test/sensor_board/: CMakeLists.txt  gcd.cpp
software/radio/RFM69/: RFM69.h
software/radio/arduino/ref/basic_rx_1/: basic_rx_1.ino
software/radio/arduino/ref/basic_rx_2/: basic_rx_2.ino
software/radio/arduino/ref/basic_tx_rx/: basic_tx_rx.ino
software/radio/arduino/ref/beacon_gps/: beacon_gps.ino
software/radio/arduino/ref/beacon_gps_2/: beacon_gps_2.ino
software/radio/arduino/ref/digi_1/: digi_1.ino
software/radio/arduino/ref/gps_test/: gps_test.ino
software/radio/arduino/v1.0/: readme.txt
software/radio/arduino/v1.0/digipeater_1/: digipeater_1.ino
software/radio/arduino/v1.0/ground_station_2/: ground_station_2.ino
software/radio/arduino/v1.1/: readme.txt
software/radio/arduino/v1.1/digipeater_1/: digipeater_1.ino
software/radio/arduino/v1.1/ground_station_1/: ground_station_1.ino
software/radio/arduino/v1.1/ground_station_REF/: ground_station.ino
src/: CMakeLists.txt  factorial.c  main.c
src/data_board/: CMakeLists.txt  factorial.c  main.c
src/dev_board/: main.c
src/sensor_board/: CMakeLists.txt
test/: CMakeLists.txt  factorial.cpp
test/data_board/: CMakeLists.txt  factorial.cpp
(+5 files in other folders)
