add_sources(SENSOR_BOARD_SOURCES "gcd.c")
add_sources(SENSOR_BOARD_NATIVE_SOURCES "main.c")

# MSP430 build
if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL msp430)
  add_compile_options("-mmcu=msp430fr5849")
  list(APPEND CMAKE_EXE_LINKER_FLAGS "-mmcu=msp430fr5849")

  get_property(SENSOR_BOARD_SOURCES GLOBAL PROPERTY SENSOR_BOARD_SOURCES)
  get_property(SENSOR_BOARD_NATIVE_SOURCES GLOBAL PROPERTY SENSOR_BOARD_NATIVE_SOURCES)

  add_executable(sensor_board.out ${SENSOR_BOARD_SOURCES} ${SENSOR_BOARD_NATIVE_SOURCES})
endif()
